# auto-snap-mcp

./: .dockerignore  .env.development  .env.production  .gitignore  Dockerfile  LICENSE  README.md  capture.py  config.py  docker-entrypoint.sh  docker-mcp-config.json  main.py  pdf_utils.py  processing.py  pyproject.toml  server.py  test_basic.py
